<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2014 Daniel Pedraza-Arcega

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- ACTIVITY TITLES -->
    <string name="twitt4droid_user_profile_activity_title">Profile</string>

    <!-- MENUS -->
    <string name="twitt4droid_refresh_menu_title">Refresh</string>
    <string name="twitt4droid_cancel_menu_title">Cancel</string>

    <!-- LOGIN BUTTON -->
    <string name="twitt4droid_login_label">Login</string>
    <string name="twitt4droid_logout_label">Log out</string>

    <!-- ERRORS -->
    <string name="twitt4droid_error_title">Twitt4droid Error</string>
    <string name="twitt4droid_error_message">Something went wrong while connecting with Twitter. Try again later</string>
    <string name="twitt4droid_return">Return</string>
    <string name="twitt4droid_continue">Continue</string>
    <string name="twitt4droid_is_offline_title">Connection Failure</string>
    <string name="twitt4droid_is_offline_messege">No Internet connection was detected</string>
    <string name="twitt4droid_goto_settings">Go to settings</string>
    <string name="twitt4droid_no_tweets_found_message">No tweets found</string>

    <!-- IMAGE DESCRIPTION -->
    <string name="twitt4droid_profile_image_description">Profile image</string>
    <string name="twitt4droid_banner_image_description">Banner image</string>
    <string name="twitt4droid_generic_image_description">Generic Image</string>
    <string name="twitt4droid_clock_icon_description">Clock icon</string>

    <!-- NEW TWEET -->
    <string name="twitt4droid_send_tweet">Send tweet</string>
    <string name="twitt4droid_new_tweet_hit">What\'s happening?</string>
    <string name="twitt4droid_tweet_sent">Tweet sent</string>
    <string name="twitt4droid_sending_tweet">Sending tweet&#8230;</string>

    <!-- TWEETS -->
    <string name="twitt4droid_tweet_overflow_label">More</string>
    <string name="twitt4droid_tweet_retweeted">Retweeted</string>
    <string name="twitt4droid_tweet_favorited">Favorited</string>

    <!-- FRAGMENT TITLES -->
    <string name="twitt4droid_queryable_timeline_fragment_title">SEARCH</string>
    <string name="twitt4droid_home_timeline_fragment_title">HOME</string>
    <string name="twitt4droid_mentions_timeline_fragment_title">MENTIONS</string>
    <string name="twitt4droid_user_timeline_fragment_title">PROFILE</string>
    <string name="twitt4droid_list_timeline_fragment_title">LIST</string>
    
    <!-- TWEET CONTEXT MENU -->
    <string-array name="twitt4droid_tweet_context_menu">
        <item>Replay</item>
        <item>Retweet</item>
        <item>Favorite</item>
    </string-array>

    <!-- HINTS -->
    <string name="twitt4droid_search">Search for tweets</string>

</resources>